color variables unified in css, border tweaks

--- a/bootstrapslider/index.html
+++ b/bootstrapslider/index.html
@@ -31,7 +31,7 @@
                 </div>
 
                 <div class="overflow-auto generatoroptionscard nopadding generatoroverflow">
-                    <ul class="list-group">
+                    <ul class="list-group oversize">
                         <li class="list-group-item d-flex justify-content-between align-items-center">An item
                             <span class="badge bg-dark rounded-pill">X</span>
 
@@ -65,7 +65,7 @@
 
                 </div>
                 <div class="overflow-auto generatoroptionscard nopadding generatoroverflow">
-                    <ul class="list-group">
+                    <ul class="list-group oversize">
                         <li class="list-group-item d-flex justify-content-between align-items-center">An item
                             <span class="badge bg-dark rounded-pill">X</span>
 
