fixed col layout (centering/responsiveness)

--- a/bootstrapslider/index.html
+++ b/bootstrapslider/index.html
@@ -23,8 +23,8 @@
     <script src="js/bootstrap-slider.js"></script>
 
     <br><br><br><br><br>
-    <div class="container">
-        <div class="row">
+    <div class="container-fluid">
+        <div class="row justify-content-center">
             <div class="col col-md-auto  padding-0 generatorcol">
                 <div class="columnheader">
                     Sounds
