lock/etc./checkboxes, other tidying

--- a/bfxr/template.html
+++ b/bfxr/template.html
@@ -21,6 +21,9 @@
     <script src="js/third_party/popper.min.js"></script>
     <script src="js/third_party/bootstrap.js"></script>
     <script src="js/third_party/bootstrap-slider.js"></script>
+    <script src="js/utils.js"></script>
+    <script src="js/synth_parameters.js"></script>
+    <script src="js/bfxr.js"></script>
 
     <br><br><br><br><br>
     <div class="container">
