--- a/bfxr/test.html
+++ b/bfxr/test.html
@@ -21,7 +21,9 @@
     <script src="js/third_party/popper.min.js"></script>
     <script src="js/third_party/bootstrap.js"></script>
     <script src="js/third_party/bootstrap-slider.js"></script>
-    <script src="js/third_party/bfxr.js"></script>
+    <script src="js/utils.js"></script>
+    <script src="js/synth_parameters.js"></script>
+    <script src="js/bfxr.js"></script>
 
     <br><br><br><br><br>
     <div class="container">
@@ -178,7 +180,7 @@
                         <tbody>
                             <tr class="tableborder">
                                 <td class="tableborder iconcell">
-                                    <img class="iconimg" src="images/symbol_mutation_locked.png">
+                                    <!-- <img class="iconimg" src="images/symbol_mutation_locked.png"> -->
                                 </td>
                                 <td class="tableborder fieldtext ">Volume</td>
                                 <td class="tableborder slidercell ">
