half-way through adding time-varying parameters

--- a/bfxr/test.html
+++ b/bfxr/test.html
@@ -289,7 +289,7 @@
                                     <img class="iconimg" src="images/symbol_parameter_timestatic.png ">
                                 </td>
                             </tr>
-                            <tr class="tableborder timevaryrowheading ">
+                            <tr class="tableborder timevaryrowheading mergewithnext">
                                 <td class="tableborder iconcell "></td>
                                 <td class="tableborder fieldtext ">Pitch</td>
                                 <td class="tableborder slidercell "></td>
@@ -297,7 +297,7 @@
                                     <img class="iconimg" src="images/symbol_parameter_timevarying.png ">
                                 </td>
                             </tr>
-                            <tr class="tableborder timevaryrow ">
+                            <tr class="tableborder timevaryrow mergewithnext">
                                 <td class="tableborder iconcell ">
                                     <img class="iconimg" src="images/symbol_mutation_unlocked.png ">
                                 </td>
@@ -309,7 +309,7 @@
 
                                 </td>
                             </tr>
-                            <tr class="tableborder timevaryrow ">
+                            <tr class="tableborder timevaryrow mergewithnext">
                                 <td class="tableborder iconcell ">
                                     <img class="iconimg" src="images/symbol_mutation_unlocked.png ">
                                 </td>
@@ -323,7 +323,7 @@
                             </tr>
 
 
-                            <tr class="tableborder timevaryrow ">
+                            <tr class="tableborder timevaryrow mergewithnext">
                                 <td class="tableborder iconcell ">
                                     <img class="iconimg" src="images/symbol_mutation_unlocked.png ">
                                 </td>
