--- a/bfxr/template.html
+++ b/bfxr/template.html
@@ -17,14 +17,6 @@
 
 <body>
 
-    <script src="js/third_party/jquery-3.5.1.min.js"></script>
-    <script src="js/third_party/popper.min.js"></script>
-    <script src="js/third_party/bootstrap.js"></script>
-    <script src="js/third_party/bootstrap-slider.js"></script>
-    <script src="js/utils.js"></script>
-    <script src="js/synth_parameters.js"></script>
-    <script src="js/bfxr.js"></script>
-
     <br><br><br><br><br>
     <div class="container">
         <div class="row justify-content-center">
@@ -94,12 +86,12 @@
                 <br>
                 <div class="card actionscol">
                     <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked>
-                        <label class="form-check-label" for="flexCheckChecked">
+                        <input class="form-check-input" type="checkbox" value="" id="rightcol_checkbox_play_on_change" checked>
+                        <label class="form-check-label" for="rightcol_checkbox_play_on_change">
                             Play on change
                         </label>
                     </div>
-                    <button type="button" class="btn btn-primary">Play</button>
+                    <button type="button" class="btn btn-primary" id="rightcol_button_play">Play</button>
                     <div class="globalvolsliderdiv">
                         <div class="fieldtext">Volume</div>
                         <div>
@@ -108,7 +100,7 @@
                     </div>
 
                     <div class="input-group w-auto">
-                        <button type="button" class="btn btn-primary hiderightborder dropdownbutton-big">Export WAV</button>
+                        <button type="button" class="btn btn-primary hiderightborder dropdownbutton-big" id="rightcol_button_export">Export WAV</button>
                         <button type="button" class="btn btn-primary dropdown-toggle dropdown-toggle-split dropdownbutton-side" data-bs-toggle="dropdown" aria-expanded="false">
                           <span class="visually-hidden">Toggle Dropdown</span>
                         </button>
@@ -191,6 +183,19 @@
     </div>
 
     <br><br><br><br><br>
+
+    <script src="js/third_party/jquery-3.5.1.min.js"></script>
+    <script src="js/third_party/popper.min.js"></script>
+    <script src="js/third_party/bootstrap.js"></script>
+    <script src="js/third_party/bootstrap-slider.js"></script>
+
+    <script src="js/riffwave.js"></script>
+    <script src="js/rng.js"></script>
+
+    <script src="js/utils.js"></script>
+    <script src="js/synth_parameters.js"></script>
+    <script src="js/bfxr_synth.js"></script>
+    <script src="js/bfxr.js"></script>
 
     <script>
         var slider_globalvol = new Slider("#globalvol", {
