--- a/bfxr/template.html
+++ b/bfxr/template.html
@@ -82,7 +82,7 @@
             </div>
 
             <div class="col order-5 col-md-auto padding-0 rightlist">
-                <canvas class="logo-canvas"></canvas>
+                <canvas id="logo-canvas"></canvas>
                 <br>
                 <div class="card actionscol">
                     <div class="form-check">
@@ -195,6 +195,7 @@
     <script src="js/utils.js"></script>
     <script src="js/synth_parameters.js"></script>
     <script src="js/bfxr_synth.js"></script>
+    <script src="js/visualiser.js"></script>
     <script src="js/bfxr.js"></script>
 
     <script>
