--- a/bfxr/index.html
+++ b/bfxr/index.html
@@ -2265,14 +2265,14 @@
       var slider_max_sound_duration = new Slider("#max_sound_duration", {
         id: "instanced_max_sound_duration",
         min: 0.3,
-        max: 5,
+        max: 10,
         range: false,
-        step: 0.047,
-        value: 2.65,
-        ticks: [0.3, 0.77, 1.24, 1.7100000000000002, 2.18, 2.65, 3.12, 3.59, 4.0600000000000005, 4.53, 5]
+        step: 0.09699999999999999,
+        value: 2.2399999999999998,
+        ticks: [0.3, 1.27, 2.2399999999999998, 3.2099999999999995, 4.18, 5.1499999999999995, 6.119999999999999, 7.089999999999999, 8.06, 9.030000000000001, 10]
       });
       slider_max_sound_duration.sliderElem.className += " singleselect";
-      slider_max_sound_duration.sliderElem.getElementsByClassName("slider-tick-container")[0].children[5].classList.add('defaulttick');
+      slider_max_sound_duration.sliderElem.getElementsByClassName("slider-tick-container")[0].children[2].classList.add('defaulttick');
 
       slider_max_sound_duration.on("slide", function(sliderValue) {
         onSliderValueChange("max_sound_duration", sliderValue, false);
