compiler....bit better

--- a/bfxr/footsteps.html
+++ b/bfxr/footsteps.html
@@ -132,6 +132,8 @@ a{
 <script src="js/globals.js"></script>
 <script src="js/soundeffect.js"></script>
 <script src="js/puredata.js"></script>
+<script src="js/puredata_modules.js"></script>
+<script src="js/puredata_parser.js"></script>
 <script src="js/footsteps.js"></script>
 
 <script>
