--- a/bfxr2_simple/index.html
+++ b/bfxr2_simple/index.html
@@ -17,7 +17,7 @@
                 <div id="tab_button_footsteps" class="tab_button active_tab ">footsteppr</div>
                 <div id="tab_button_footsteps" class="tab_button">transfxr</div>
             </div>
-            <div id="content">
+            <div class="tab_page active_tab"">
                 <div id="left_panel">
                     <div id="preset_list">
                         <button class="normie_button">Pickup/Coin</button>
