data structures! so tidy!

--- a/bfxr2_simple/index.html
+++ b/bfxr2_simple/index.html
@@ -3,13 +3,16 @@
         <meta charset="UTF-8">
 
         <script src="js/third_party/bootstrap-slider.js"></script>
+        <script src="js/synths/SynthTemplate.js"></script>
+        <script src="js/synths/Bfxr.js"></script>
+        <script src="js/synths/Footsteppr.js"></script>
         <script src="js/tab.js"></script>
         <script src="js/guifxr.js"></script>
-        <script src="js/bfxr.js"></script>
+        <script src="js/index.js"></script>
         <link rel="stylesheet" href="css/third_party/bootstrap-tooltip.css">
         <link rel="stylesheet" href="css/third_party/bootstrap-slider.css">
         <link rel="stylesheet" href="css/slider.css">
-        <link rel="stylesheet" href="css/bfxr.css">
+        <link rel="stylesheet" href="css/index.css">
     </head>
     <body>
         <div id="main_container">
