--- a/bfxr2_simple/template.html
+++ b/bfxr2_simple/template.html
@@ -90,12 +90,12 @@
                             <table class="paramtable">
                                 <tr>
                                     <td class="lockcolumn">
-                                        <img src="img/unlocked.png" alt="lock" class="lock_icon unlocked">
+                                        <div class="lockimage"></div>
                                     </td>
                                     <td>
 
                                         <!--4x3 grid of buttons -->
-                                        <div class="button_grid">
+                                        <div class="button_grid_4c">
                                             <button class="button_grid_button">Triangle</button>
                                             <button class="button_grid_button">Sin</button>
                                             <button class="button_grid_button">Square</button>
@@ -311,7 +311,7 @@
                                     <td>
 
                                         <!--4x3 grid of buttons -->
-                                        <div class="button_grid">
+                                        <div class="button_grid_4c">
                                             <button class="button_grid_button">page2</button>
                                             <button class="button_grid_button">Sin</button>
                                             <button class="button_grid_button">Square</button>
@@ -434,7 +434,7 @@
                                     <td>
 
                                         <!--4x3 grid of buttons -->
-                                        <div class="button_grid">
+                                        <div class="button_grid_4c">
                                             <button class="button_grid_button">page3</button>
                                             <button class="button_grid_button">Sin</button>
                                             <button class="button_grid_button">Square</button>
